WIP adding X-CSRF hadningg
need to add a token arg to Result.update
and pass it in from dashboard on each call.

--- a/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
+++ b/django/website/dashboard/templates/dashboard/dashboard_base_elm.html
@@ -12,6 +12,7 @@
 <script>
 (function () {
     Aptivate = { data: {{ data|safe }} };
+    Aptivate.data.csrf_token = "{{ csrf_token }}"
 })();
 </script>
 {% endblock post_footer %}
